examples/errors/recursive_class_decl.ik
type Sized class:
    fn size(Self, T) Int where T: Sized

fn main():
    print("Hello\n")
